feat: Hibernate upgrade
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>